# Fastq2Sam

./: .gitignore  .gitmodules  CMakeLists.txt  my.fastq  my2.fastq  out.bam  out.sam  readme.md
.github/workflows/: build.yml
build2/: CMakeCache.txt
build3/: CMakeCache.txt  cpm-package-lock.cmake
build3/CPM_modules/: Findcereal.cmake  Findsdsl-lite.cmake
build_mac/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  fastq2sam
build_mac/Testing/Temporary/: CTestCostData.txt
src/: CMakeLists.txt  Fastq2Sam.cpp  bamhash.cpp  bamhash.h  convert_phred_score.cpp  convert_phred_score.h  fastq2sam.cpp  fastq_metadata.cpp  fastq_metadata.h  hello_seqan.cpp  hello_world.cpp  id_parser.cpp  id_parser.h  phred.cpp  phred.h  scan_fastq.cpp  scan_fastq.h  sequence_file_input.h  split.cpp  split.h  split_fastq.cpp  to_sam.cpp  to_sam.h  version.h
src/Fastq2Sam.dSYM/Contents/: Info.plist
src/Fastq2Sam.dSYM/Contents/Resources/DWARF/: Fastq2Sam
src_old/: fastq2sam.cpp
test/: 1.fq  2.fq  DNBSEQ.1.fq  DNBSEQ.2.fq  SRA.1.fq  SRA.2.fq  illumina.1.fq  illumina.2.fq  index_mismatch.1.fq  index_mismatch.2.fq  index_mismatch.file_list.txt  out.noPG.DNBSEQ.sam  out.noPG.SRA.sam  out.noPG.index_mismatch.sam  out.noPG.sam  test_in_zeroone.sh
